# lunch-voting-api

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
core/: mixins.py  permissions.py  settings.py  urls.py  versioning.py
restaurants/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
restaurants/migrations/: 0001_initial.py
restaurants/serializers/: base.py  v1.py  v2.py  versions.py
users/: admin.py  models.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/serializers/: base.py  v1.py  v2.py  versions.py
voting/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
voting/migrations/: 0001_initial.py
voting/serializers/: __init__.py  base.py  v1.py  v2.py  versions.py
