[project]
name = "lunch-voting-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.8"
dependencies = [
    "django>=6.0.3",
    "djangorestframework>=3.17.0",
    "djangorestframework-simplejwt>=5.5.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
    "ruff>=0.15.6",
]
